add auth in docs add description in README
